# configobj

./: .editorconfig  .env  .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _version.py  configobj.py  configobj.wpr  dev-requirements.txt  pylint.cfg  setup.cfg  setup.py  setup_validate.py  tasks.py  temp.py  test_configobj.py  tox.ini  validate.py
.github/workflows/: python-test.yml
docs/: Makefile  conf.py  configobj.html  configobj.rst  configobj.txt  docutils.conf  index.rst  make.bat  validate.html  validate.rst  validate.txt
docs/_static/css/: custom.css
extras/: ConfigPersist.py  configpersist.txt
functionaltests/: test_configobj.py  test_validate_errors.py
src/configobj/: __init__.py  _version.py  validate.py
src/tests/: conf_envsubst.py  configobj_doctests.py  conftest.py  envsubst.ini.template  test_configobj.py  test_validate.py  test_validate_envsubst.py  test_validate_errors.py
src/validate/: __init__.py
tests/: test_configobj.py  test_validate.py  test_validate_errors.py
