[metadata]
name = configobj
author = Rob Dennis, Eli Courtwright (Michael Foord & Nicola Larosa original maintainers)
author_email = rdennis+configobj@gmail.com, eli@courtwright.org, fuzzyman@voidspace.co.uk, nico@tekNico.net
license = BSD-3-Clause
license_files = LICENSE
description = Config file reading, writing and validation.
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
keywords = config, ini, dictionary, application, admin, sysadmin, configuration, validation
url = https://github.com/DiffSK/configobj
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = configobj
install_requires = six
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
package_dir =
    = src

[egg_info]
tag_build = .dev0
tag_date = false

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* *.egg *.egg-info bin dist include lib local share static docs
python_files = src/tests/test_*.py

[flake8]
max-line-length = 132
